<resources>
    <string name="app_name">LitsaAndroid</string>
    <string name="home">home</string>
    <string name="favourites">favourites</string>
    <string name="please_choose_a_location">Please choose a location.</string>
    <string name="nature">Nature</string>
    <string name="select_all">Select All</string>
    <string name="football">Football</string>
    <string name="spa">Spa</string>
    <string name="food">Food</string>
    <string name="religion">Religion</string>
    <string name="art">Art</string>
    <string name="books">Books</string>
    <string name="nightlife">Nightlife</string>
    <string name="what_are_your_interests">What are your interests?</string>


    <string name="welcome">welcome</string>
    <string name="add_email">Add email</string>
    <string name="log_in">Log in</string>
    <string name="create">Create</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_add_your_email">please_add_your_email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">confirm_password</string>
    <string name="submit">Submit</string>
    <string name="show_average_price">show average price</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="your_email_here">Your email here</string>
    <string name="your_name_here">Your name here</string>
    <string name="reset_password">Reset Password</string>
    <string name="title">Title</string>
    <string name="something_about_the_place">Something about the place.</string>
    <string name="culture_entertainment">Culture/Entertainment</string>
    <string name="health_and_wellness">Health and Wellness</string>
    <string name="sports">Sports</string>
    <string name="icon_of_a_user">icon of a user</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="update">Update</string>
    <string name="update_name">Update name</string>

</resources>