<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueSky"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/welcome"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/email"
    android:src="@drawable/welcome"
    />
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/add_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:background="@drawable/searchbar"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        />
    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginTop="30sp"
        android:hint="@string/enter_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:background="@drawable/searchbar"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        />
    <Button
        android:id="@+id/LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toBottomOf="@id/createAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/log_in"
        android:backgroundTint="@color/bluewelcome"
        />
    <Button
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bluewelcome"
        app:layout_constraintTop_toBottomOf="@id/LogIn"
        app:layout_constraintBottom_toTopOf="@+id/reset_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/create"
        />
    <Button
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bluewelcome"
        app:layout_constraintTop_toBottomOf="@id/createAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/forgot_password"
        />



</androidx.constraintlayout.widget.ConstraintLayout>