<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainActivity.HomeActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueSky"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:src="@drawable/city_nature"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/search_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/searchbar"
        android:backgroundTint="@color/white"
        >
        <fragment android:id="@+id/autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Radius :"
        android:textSize="15sp"
        android:layout_marginStart="15sp"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintBottom_toTopOf="@id/interests"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/continuousSlider"/>
    <com.google.android.material.slider.Slider
        android:id="@+id/continuousSlider"
        android:layout_width="0sp"
        android:layout_height="0sp"
        app:thumbColor="@color/bluewelcome"
        app:thumbStrokeColor="@color/bluewelcome"
        android:valueFrom="0.0"
        android:valueTo="50.0"
        android:value="5.0"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintBottom_toTopOf="@id/interests"
        app:layout_constraintStart_toEndOf="@id/radius"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/interests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radius"
        app:layout_constraintBottom_toTopOf="@id/check_table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/what_are_your_interests"
        android:layout_marginStart="20sp"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TableLayout
        android:id="@+id/check_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        app:layout_constraintTop_toBottomOf="@+id/interests"
        app:layout_constraintBottom_toTopOf="@id/submit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:stretchColumns="0,1,2">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20sp">
            <CheckBox
                android:id="@+id/CheckBoxArt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/culture_entertainment" />
            <CheckBox
                android:id="@+id/CheckBoxBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/books" />
            <CheckBox
                android:id="@+id/CheckBoxNight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nightlife" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20sp">
            <CheckBox
                android:id="@+id/CheckBoxNature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nature" />
            <CheckBox
                android:id="@+id/CheckBoxReligion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/religion" />
            <CheckBox
                android:id="@+id/CheckBoxFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20sp">
            <CheckBox
                android:id="@+id/CheckBoxSpa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_and_wellness" />
            <CheckBox
                android:id="@+id/CheckBoxFootball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports" />
            <CheckBox
                android:id="@+id/CheckBoxALL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_all" />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint= "@color/bluewelcome"
        android:text="@string/submit"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>