<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".log.LogFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueSky">

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/createAccount"
            android:hint="@string/please_add_your_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:background="@drawable/searchbar"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            />
        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:layout_marginTop="30sp"
            android:hint="Enter password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:background="@drawable/searchbar"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            />
        <TextView
            android:id="@+id/passwordrepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:layout_marginTop="30sp"
            android:hint="@string/confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:background="@drawable/searchbar"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            />

        <Button
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordrepeat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/create"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>